fix overflow + links footer

--- a/css/style.scss
+++ b/css/style.scss
@@ -30,6 +30,7 @@ body {
   font-size: 2rem;
   font-family: "Jura", sans-serif;
   color: $white;
+  overflow-x: hidden;
 }
 
 section:not(:last-child) {
@@ -596,10 +597,16 @@ footer {
   .bottom-menu {
     > div {
       display: flex;
-      justify-content: space-between;
+      justify-content: flex-start;
       margin-bottom: 2rem;
-      text-align: center;
+      text-align: left;
       flex-wrap: wrap;
+      &:first-child {
+        margin-bottom: 2.5rem;
+      }
+      a {
+        width: 25%;
+      }
     }
   }
 
@@ -822,6 +829,16 @@ main {
       }
     }
 
+    .bottom-menu {
+      > div {
+        justify-content: center;
+        gap: 1rem;
+        a {
+          width: unset;
+        }
+      }
+    }
+
     p {
       text-align: justify;
     }
@@ -829,6 +846,7 @@ main {
     .copyright {
       flex-direction: column;
       gap: 1rem;
+      text-align: center;
     }
   }
 }
